Concurrent GC should not rely on current phase to determine if it's safe to steal conn https://bugs.webkit.org/show_bug.cgi?id=199786 <rdar://problem/52505197>

Reviewed by Saam Barati.

In r246507, we fixed a race condition in the concurrent GC where the mutator might steal
the conn from the collector thread while it transitions from the End phase to NotRunning.
However, that fix was not sufficient. In the case that the mutator steals the conn, and the
execution interleaves long enough for the mutator to progress to a different collection phase,
the collector will resume in a phase other than NotRunning, and hence the check added to
NotRunning will not suffice. To fix that, we add a new variable to track whether the collector
thread is running (m_collectorThreadIsRunning) and use it to determine whether it's safe to
steal the conn, rather than relying on m_currentPhase.

* heap/Heap.cpp:
(JSC::Heap::runNotRunningPhase):
(JSC::Heap::requestCollection):
* heap/Heap.h:


Canonical link: https://commits.webkit.org/213659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247426 268f45cc-cd09-0410-ab3c-d52691b4dbfc